adding a dependency to the grid field auto-refresh module

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"keywords": ["silverstripe", "authentication"],
 	"require": {
 		"silverstripe/framework": "3.*",
-		"silverstripe/cms": "3.*"
+		"silverstripe/cms": "3.*",
+		"silverstripe/gridfieldajaxrefresh": "dev-master"
 	}
 }
