--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
 	"type": "silverstripe-module",
 	"keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
 	"require": {
-		"silverstripe/framework": "3.*",
-		"silverstripe/cms": "3.*",
-		"silverstripe/gridfieldajaxrefresh": "dev-master"
+		"silverstripe/framework": "3.1.*",
+		"silverstripe/cms": "3.1.*",
+		"silverstripe/gridfieldajaxrefresh": "dev-master",
+		"silverstripe/staticpublisher": "dev-master"
 	}
 }
