--- a/_config/staticpublishqueue.yml
+++ b/_config/staticpublishqueue.yml
@@ -4,7 +4,8 @@ After: 'framework/*','cms/*'
 ---
 SiteTree:
   extensions:
-    - StaticPublishingSiteTreeExtension
+    - PublishableSiteTree
+    - SiteTreePublishingEngine
     - FilesystemPublisher('cache', 'html')
 StaticPublisher:
   include_caching_metadata: true
