Added min stability for composer
Required for scrutinizer runs

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,6 @@
 		"silverstripe/framework": "3.1.*",
 		"silverstripe/cms": "3.1.*",
 		"silverstripe/gridfieldajaxrefresh": "dev-master"
-	}
+	},
+	"minimum-stability": "dev"
 }
