--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
 	"type": "silverstripe-module",
 	"keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
 	"require": {
-		"silverstripe/framework": "3.1.*",
-		"silverstripe/cms": "3.1.*",
+		"silverstripe/framework": ">=3.1.0",
+		"silverstripe/cms": ">=3.1.0",
 		"silverstripe/gridfieldajaxrefresh": "dev-master"
 	},
 	"minimum-stability": "dev"
