--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,34 @@
 {
-	"name": "silverstripe/staticpublishqueue",
-	"description": "Static publishing queue to create static versions of pages for enhanced performance and security",
-	"type": "silverstripe-vendormodule",
-	"keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
-	"require": {
-		"silverstripe/framework": "^4",
-		"silverstripe/cms": "^4",
-		"symbiote/silverstripe-queuedjobs": "^4.1"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "^5"
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "4.x-dev"
-		}
-	},
-	"minimum-stability": "dev"
+    "name": "silverstripe/staticpublishqueue",
+    "description": "Static publishing queue to create static versions of pages for enhanced performance and security",
+    "type": "silverstripe-vendormodule",
+    "keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
+    "require": {
+        "silverstripe/framework": "^4",
+        "silverstripe/cms": "^4",
+        "silverstripe/assets": "^1",
+        "silverstripe/config": "^1",
+        "silverstripe/errorpage": "^1",
+        "symbiote/silverstripe-queuedjobs": "^4.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5",
+        "squizlabs/php_codesniffer": "^3"
+    },
+    "autoload": {
+        "psr-4": {
+            "SilverStripe\\StaticPublishQueue\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "SilverStripe\\StaticPublishQueue\\Test\\": "tests/php/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "4.x-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
