--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "silverstripe/assets": "^1",
         "silverstripe/config": "^1",
         "silverstripe/errorpage": "^1",
-        "symbiote/silverstripe-queuedjobs": "^4.0.6"
+        "symbiote/silverstripe-queuedjobs": "^4.0.6",
+        "silverstripe/versioned": "^1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
