move URLtoPath to functions.php and engage autoloader

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "psr-4": {
             "SilverStripe\\StaticPublishQueue\\": "src/",
             "SilverStripe\\StaticPublishQueue\\Test\\": "tests/php/"
-        }
+        },
+        "files": [
+            "includes/functions.php"
+        ]
     },
     "extra": {
         "branch-alias": {
