Use composer include-path to load staticrequesthandler.php

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
             "includes/functions.php"
         ]
     },
+    "include-path": [
+        "includes/"
+    ],
     "extra": {
         "branch-alias": {
             "dev-master": "4.x-dev"
