--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,6 @@
 		"silverstripe/cms": "^3.1.0",
 		"silverstripe/gridfieldajaxrefresh": "dev-master"
 	},
-	"extra": {
-		"branch-alias": {
-			"3.x-dev": "3.4.x-dev"
-		}
-	},
+	"extra": [],
 	"minimum-stability": "dev"
 }
