--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "silverstripe/staticpublishqueue",
 	"description": "Static publishing queue to create static versions of pages for enhanced performance and security",
 	"type": "silverstripe-module",
+        "license": "BSD-3-Clause",
 	"keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
 	"require": {
 		"silverstripe/framework": "^3.1.0",
