--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,20 @@
     "description": "Static publishing queue to create static versions of pages for enhanced performance and security",
     "license": "BSD-3-Clause",
     "type": "silverstripe-vendormodule",
-    "keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
+    "keywords": [
+        "silverstripe",
+        "static",
+        "html",
+        "security",
+        "performance",
+        "static-publishing",
+        "caching",
+        "cache",
+        "static-caching",
+        "static-cache",
+        "queue",
+        "publishing"
+    ],
     "require": {
         "silverstripe/framework": "^4.0.2",
         "silverstripe/cms": "^4",
@@ -12,7 +25,7 @@
         "silverstripe/versioned": "^1.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
+        "phpunit/phpunit": "^5.7",
         "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
@@ -31,6 +44,10 @@
         "branch-alias": {
             "dev-master": "4.x-dev"
         }
+    },
+    "scripts": {
+        "lint": "phpcs -s src/ tests/php/",
+        "lint-clean": "phpcbf src/ tests/php/"
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
