--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 
-dist: trusty
+dist: xenial
 
-before_install:
- - sudo apt-get update
+services:
+  - mysql
+  - postgresql
 
 cache:
   directories:
@@ -14,21 +15,17 @@ addons:
     packages:
       - tidy
 
-env:
-  global:
-    - COMPOSER_ROOT_VERSION=4.x-dev
-
 matrix:
   fast_finish: true
   include:
     - php: 7.1
-      env: DB=MYSQL PHPUNIT_TEST=1 PHPCS_TEST=1
+      env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
     - php: 7.2
-      env: DB=PGSQL PHPUNIT_TEST=1
+      env: DB=PGSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
     - php: 7.3
-      env: DB=MYSQL PDO=1 PHPUNIT_TEST=1
-    - php: 7.4snapshot
-      env: DB=MYSQL PHPUNIT_TEST=1
+      env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PDO=1 PHPUNIT_TEST=1
+    - php: 7.4
+      env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
       addons:
         apt:
           packages:
@@ -46,8 +43,10 @@ before_script:
 
 # Install composer dependencies
   - composer validate
-  - composer require --no-update silverstripe/recipe-testing:^1 silverstripe/recipe-cms:4.x-dev
-  - if [[ $DB == PGSQL ]]; then composer require --no-update silverstripe/postgresql:2.x-dev; fi
+  - composer require --no-update silverstripe/recipe-cms:$RECIPE_VERSION silverstripe/recipe-testing:^1
+  # Fix for running phpunit 5 on php 7.4+
+  - composer require --no-update sminnee/phpunit-mock-objects:^3
+  - if [[ $DB == PGSQL ]]; then composer require --no-update silverstripe/postgresql:^2; fi
   - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
