DOCS add gzip example

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         "silverstripe",
         "static",
         "html",
+        "gzip",
+        "speed",
+        "gz",
         "security",
         "performance",
         "static-publishing",
