--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -12,4 +12,11 @@
             <property name="spacing" value="1" />
         </properties>
     </rule>
+    <rule ref="Generic.Formatting.SpaceAfterNot">
+      <properties>
+            <property name="spacing" value="0" />
+        </properties>
+    </rule>
+    <rule ref="Generic.Arrays.DisallowLongArraySyntax" />
+    <rule ref="Squiz.Arrays.ArrayDeclaration.NoComma" />
 </ruleset>
