--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "publishing"
     ],
     "require": {
+        "php": "^7.1",
         "silverstripe/framework": "^4.0.2",
         "silverstripe/cms": "^4",
         "silverstripe/config": "^1",
-        "symbiote/silverstripe-queuedjobs": "^4.0.6",
+        "symbiote/silverstripe-queuedjobs": "^4.5",
         "silverstripe/versioned": "^1.0.2"
     },
     "require-dev": {
