--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,9 @@
 version: ~> 1.0
 
-import:
-  - silverstripe/silverstripe-travis-shared:config/provision/standard.yml
+env:
+  global:
+    - COMPOSER_ROOT_VERSION="4.x-dev"
+    - REQUIRE_RECIPE="4.x-dev"
 
-jobs:
-  fast_finish: true
-  include:
-    - php: 7.4
-      env:
-        - DB=MYSQL
-        - REQUIRE_INSTALLER="4.10.x@dev"
-        - PHPCS_TEST=1
-        - PHPUNIT_TEST=1
-        - PHPUNIT_COVERAGE_TEST=1
-    - php: 8.0
-      env:
-        - DB=MYSQL
-        - REQUIRE_INSTALLER="4.10.x@dev"
-        - PHPUNIT_TEST=1
-    - php: 8.1
-      env:
-        - DB=MYSQL
-        - REQUIRE_INSTALLER="4.10.x@dev"
-        - PHPUNIT_TEST=1
+import:
+  - silverstripe/silverstripe-travis-shared:config/provision/standard-jobs-fixed.yml
