--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "silverstripe/versioned": "^1.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3"
+        "silverstripe/recipe-testing": "^1 || ^2"
     },
     "autoload": {
         "psr-4": {
