--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "silverstripe/versioned": "^1.6"
     },
     "require-dev": {
-        "silverstripe/recipe-testing": "^1 || ^2"
+        "silverstripe/recipe-testing": "^2"
     },
     "autoload": {
         "psr-4": {
