--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "publishing"
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.4 || ^8.0",
         "silverstripe/framework": "^4.6",
         "silverstripe/cms": "^4",
         "silverstripe/config": "^1",
@@ -26,8 +26,7 @@
         "silverstripe/versioned": "^1.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3"
+        "silverstripe/recipe-testing": "^2"
     },
     "autoload": {
         "psr-4": {
@@ -51,5 +50,12 @@
         "lint-clean": "phpcbf src/ tests/php/"
     },
     "prefer-stable": true,
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/recipe-plugin": true,
+            "silverstripe/vendor-plugin": true
+        }
+    }
 }
