--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -2,21 +2,25 @@
 <ruleset name="SilverStripe">
     <description>CodeSniffer ruleset for SilverStripe coding conventions.</description>
 
+    <file>src</file>
+    <file>tests</file>
+
+    <rule ref="Generic.Arrays.DisallowLongArraySyntax" />
+
+    <!-- base rules are PSR-2 -->
     <rule ref="PSR2" >
         <!-- Current exclusions -->
         <exclude name="PSR1.Methods.CamelCapsMethodName" />
         <exclude name="PSR1.Files.SideEffects.FoundWithSymbols" />
+        <exclude name="PSR2.Classes.PropertyDeclaration" />
+        <exclude name="PSR2.ControlStructures.SwitchDeclaration" /> <!-- causes php notice while linting -->
+        <exclude name="PSR2.ControlStructures.SwitchDeclaration.WrongOpenercase" />
+        <exclude name="PSR2.ControlStructures.SwitchDeclaration.WrongOpenerdefault" />
+        <exclude name="PSR2.ControlStructures.SwitchDeclaration.TerminatingComment" />
+        <exclude name="PSR2.Methods.MethodDeclaration.Underscore" />
+        <exclude name="Squiz.Scope.MethodScope" />
+        <exclude name="Squiz.Classes.ValidClassName.NotCamelCaps" />
+        <exclude name="Generic.Files.LineLength.TooLong" />
+        <exclude name="PEAR.Functions.ValidDefaultValue.NotAtEnd" />
     </rule>
-    <rule ref="Squiz.Strings.ConcatenationSpacing">
-        <properties>
-            <property name="spacing" value="1" />
-        </properties>
-    </rule>
-    <rule ref="Generic.Formatting.SpaceAfterNot">
-      <properties>
-            <property name="spacing" value="0" />
-        </properties>
-    </rule>
-    <rule ref="Generic.Arrays.DisallowLongArraySyntax" />
-    <rule ref="Squiz.Arrays.ArrayDeclaration.NoComma" />
 </ruleset>
