--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         "publishing"
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "silverstripe/framework": "^4.6",
-        "silverstripe/cms": "^4",
-        "silverstripe/config": "^1",
-        "symbiote/silverstripe-queuedjobs": "^4.5",
-        "silverstripe/versioned": "^1.6"
+        "php": "^8.1",
+        "silverstripe/framework": "^5",
+        "silverstripe/cms": "^5",
+        "silverstripe/config": "^2",
+        "symbiote/silverstripe-queuedjobs": "^5",
+        "silverstripe/versioned": "^2"
     },
     "require-dev": {
-        "silverstripe/recipe-testing": "^2"
+        "silverstripe/recipe-testing": "^3"
     },
     "autoload": {
         "psr-4": {
