--- a/tests/php/Extension/Engine/SiteTreePublishingEngineTest.yml
+++ b/tests/php/Extension/Engine/SiteTreePublishingEngineTest.yml
@@ -5,7 +5,7 @@ SilverStripe\CMS\Model\SiteTree:
   page2:
     Title: Page 2
     URLSegment: page-2
-    ParentID: =>SilverStripe\CMS\Model\SiteTree.page1
+    Parent: =>SilverStripe\CMS\Model\SiteTree.page1
   page3:
     Title: Page 3
     URLSegment: page-3
