--- a/.github/workflows/merge-up.yml
+++ b/.github/workflows/merge-up.yml
@@ -1,17 +1,17 @@
-name: Keepalive
+name: Merge-up
 
 on:
-  # At 11:55 AM UTC, on day 24 of the month
+  # At 3:10 PM UTC, only on Thursday
   schedule:
-    - cron: '55 11 24 * *'
+    - cron: '10 15 * * 4'
   workflow_dispatch:
 
 jobs:
-  keepalive:
-    name: Keepalive
+  merge-up:
+    name: Merge-up
     # Only run cron on the silverstripe account
     if: (github.event_name == 'schedule' && github.repository_owner == 'silverstripe') || (github.event_name != 'schedule')
     runs-on: ubuntu-latest
     steps:
-      - name: Keepalive
-        uses: silverstripe/gha-keepalive@v1
+      - name: Merge-up
+        uses: silverstripe/gha-merge-up@v1
