--- a/.github/workflows/dispatch-ci.yml
+++ b/.github/workflows/dispatch-ci.yml
@@ -1,9 +1,9 @@
 name: Dispatch CI
 
 on:
-  # At 3:10 PM UTC, only on Sunday and Monday
+  # At 11:55 AM UTC, only on Tuesday and Wednesday
   schedule:
-    - cron: '10 15 * * 0,1'
+    - cron: '55 11 * * 2,3'
 
 jobs:
   dispatch-ci:
