--- a/.github/workflows/merge-up.yml
+++ b/.github/workflows/merge-up.yml
@@ -1,9 +1,9 @@
 name: Merge-up
 
 on:
-  # At 3:10 PM UTC, only on Thursday
+  # At 11:55 AM UTC, only on Saturday
   schedule:
-    - cron: '10 15 * * 4'
+    - cron: '55 11 * * 6'
   workflow_dispatch:
 
 jobs:
