--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "silverstripe/versioned": "^2"
     },
     "require-dev": {
-        "silverstripe/recipe-testing": "^3"
+        "silverstripe/recipe-testing": "^3",
+        "silverstripe/standards": "^1",
+        "phpstan/extension-installer": "^1.3"
     },
     "autoload": {
         "psr-4": {
